--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.0.20 # goi sang app khac: sms, call, email.
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    # cupertino_icons: ^1.0.0
+    # url_launcher: ^6.0.20 # goi sang app khac: sms, call, email.
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
