--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,18 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   persistent_bottom_nav_bar: ^4.0.2
 
+  transparent_image: "^0.1.0"
+  cached_network_image: "^0.4.1"
+  query_params: "^0.5.0"
+
+  sqflite: ^1.1.6+1
+
+  flutter_bloc: ^4.0.0
+  provider: ^3.1.0+1
+  flutter_lorem: ^1.1.0
+  redux: ^3.0.0
+  flutter_redux: ^0.5.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
